--- a/css.css
+++ b/css.css
@@ -41,11 +41,30 @@
 
 
   }
+
+
   
   body {
     overflow-x: hidden;
     background-color: var(--ljusbeige);
   }
+
+  body::-webkit-scrollbar {
+    width: 1rem;
+}
+
+body::-webkit-scrollbar-thumb {
+    height: 4rem;
+    border-radius: 0.5rem;
+    border: 4px solid transparent;
+    background-clip: content-box;
+    background-color: #2e1c13;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: rgba(255, 255, 255, 0);
+}
+
   
   header a {
     text-decoration: none;
@@ -61,6 +80,8 @@
     justify-content: space-between;
     z-index: 10;
   }
+
+ 
 
   p{
     color: var(--p);
@@ -196,7 +217,7 @@
   }
   
   .page1 {
-    background-image: url(im-grieving-670x410.png);
+    background-image: url(image17.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 50vh;
@@ -526,15 +547,10 @@
 	
 }
   
-  .page4 p {
-  position: relative;
-  font-size: 50px;
-  padding: 70px;
-  width: 900px;
-  }
+
   
   .page5 {
-  min-height: calc(100vh - 200px);
+  min-height: calc(90vh - 200px);
   
   }
 
@@ -544,9 +560,11 @@
   display: flex;
   justify-content: space-evenly;
   }
+
   .Sboxes:last-child {
   margin-top: 120px;
   }
+
   .Sbox {
   width: 30vw;
   font-size: 1em;
@@ -559,17 +577,21 @@
   /* 	border-image: linear-gradient(to bottom, #ccc, #555 66%, #181818) 1 100%; */
   border-image: linear-gradient(to bottom, #C9EEC1, #eee, #C9EEC1) 1 100%;
   }
+  
   .Sbox:last-child {
   border-right: 0;
   }
+
   .Sbox .Sicon {
   font-size: 4em;
   color: #555;
   margin-bottom: 0.6em;
   }
+
   .Sbox .Sicon:hover {
   color: #d8d8d8;
   }
+
   .Sbox h2 {
   font-size: 1.3em;
   margin-bottom: 1em;
@@ -579,6 +601,7 @@
   line-height: 1em;
   color: var(--p);
   }
+
   .Sbox .Spiece-count {
   font-style: italic;
   color: #9f9f9f;
@@ -591,21 +614,22 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 0em 15em;
+    margin: 0em 26em;
     line-height: 1.4em;
-
-    
   }
 
   .title {
     font-weight: bolder;
-    font-size: 34px;
+    font-size: 39px;
+    
   }
   
   .myapproachp{
-  position: relative;
-  text-align: left;
-  font-size: 20px;
+    position: relative;
+    font-size: 24px;
+    padding: 2em;
+    margin: 1em;
+    text-align: center;
   }
 
   
@@ -729,6 +753,36 @@
     margin-bottom: 5px;
   }
 
+  @media (max-width: 1366px) {
+
+    .page2{
+      padding: 0 3em;
+    }
+
+    .page2-p {
+      padding: 10px;
+    }
+
+    .newbox {
+      margin: 0em 13em;
+    }
+
+  }
+
+  @media (max-width: 1100px) {
+
+    .page6 {
+    padding: 0em 5em;
+    }
+
+      
+  #box1 {
+    position: relative;
+    margin: 4em 10em;
+    }
+
+  }
+
    /*responsive 480 1366*/ 
   @media (max-width: 480px) {
   
@@ -768,20 +822,18 @@
   }
 
   .page3 img{
-    position: relative;
     width: 19em;
-    height: auto;
-    margin-top: 1em;
     }
     
     .page3 p {
-        width: 75%;
+        width: 90%;
         padding: 50px;
-        
-
+        top: 7%;
+        left: 7%;
         }
 
   #btn2{
+    margin: 1em;
     padding-left: 0em;
 }
 
@@ -798,42 +850,59 @@
     width: 40vw; 
 }
 
+#work-with-me .underlined {
+  font-size: 45px;
+}
+
+#work-with-me .underline-clip:after{
+  width: 110%;
+}
+
 .newbox {
-    padding: 0 0 10em 0;
+  margin: 0em 0em;
   }
  
   
   .myapproachp{
-  text-align: center;
+    padding: 1em;
+    margin: 1em;
   }
 
   #btn3{
-    position: absolute;
-    margin-top: 20em;
+    margin: 1em;
+  }
 
+  #client-stories .underlined {
+    font-size: 45px;
+  }
+
+  #client-stories .underline-clip:after{
+    width: 110%;
   }
 
   .page6 {
     display: block;
-    padding: 0em 0em;
+    padding: 1em 0em;
   }
 
   #box2 {
-    position: relative;
     left: 0em;
-  
+    margin-top: 3em;
     }
-
-      
+ 
   #box1 {
-    position: relative;
-    margin: 4em 0em;
-  
+    margin: 5em 0em;
     }
 
-
-
-   
+    .box p {
+      letter-spacing: 1px;
+      font-size: 13px;
+      padding: 30px;
+      box-shadow: 10px 10px var(--boxshadow);
+      width: 90%;
+      top: 7%;
+      left: 7%;
+      }
 
   }
   
