--- a/css.css
+++ b/css.css
@@ -244,6 +244,7 @@ body::-webkit-scrollbar-track {
     font-size: 24px;
     padding: 20px;
     margin: 1em;
+    border: 1px solid rgba(0, 0, 0, 0);
   }
 
   .page2 p{
