--- a/css.css
+++ b/css.css
@@ -1,5 +1,5 @@
 :root {
-    --ljusbeige: #cef3c6;  /*backroundcolor*/ 
+    --ljusbeige: #A1C284;  /*backroundcolor*/ 
     --kallbrun: #2e1c13;   /*header/footer */  
     --ljusgrön: #b0d3a5;  /*nothing*/ 
     --ljusgrön2: #C9EEC1;  /*nothing*/ 
@@ -12,9 +12,8 @@
     --textrutashadow : #b7bebb ; 
     --p : #2e1c13; /*p*/
   
-  
     /*old version 
-    --ljusbeige: #f9cdad;  backroundcolor
+     --ljusbeige: #cef3c6;  backroundcolor
     --kallbrun: #4f3426;   header/footer 
     --ljusgrön: #b0d3a5;  nothing
     --ljusgrön2: #C9EEC1;  /*nothing
@@ -26,9 +25,7 @@
     --textruta : #ecc2a4 ;
     --textrutashadow : #b7bebb ; 
     */
-  
   }
-  
   
   * {
     margin: 0;
@@ -40,8 +37,6 @@
     font-weight: 300;
   }
 
-
-  
   body {
     overflow-x: hidden;
     background-color: var(--ljusbeige);
@@ -63,7 +58,6 @@ body::-webkit-scrollbar-track {
     background-color: rgba(255, 255, 255, 0);
 }
 
-  
   header a {
     text-decoration: none;
   }
@@ -79,12 +73,9 @@ body::-webkit-scrollbar-track {
     z-index: 10;
   }
 
- 
-
   p{
     color: var(--p);
   }
-  
   
   #brand {
     font-weight: bolder;
@@ -120,7 +111,6 @@ body::-webkit-scrollbar-track {
     transition: 0.3s;
   }
 
-  
   #Connect {
     border-radius: 5px;
     padding: 5px 8px;
@@ -130,7 +120,6 @@ body::-webkit-scrollbar-track {
   #Connect a {
     color: #6df078;
   }
-  
   
   #hamburger-icon {
     margin: auto 0;
@@ -144,8 +133,7 @@ body::-webkit-scrollbar-track {
     height: 3px;
     background-color: white;
     margin: 6px 0;
-    transition: 0.4s;
-    
+    transition: 0.4s; 
   }
   
   .open .bar1 {
@@ -184,7 +172,6 @@ body::-webkit-scrollbar-track {
     margin-bottom: 10px;
   }
   
-
   .page {
     min-height: calc(100vh - 200px);
     display: flex;
@@ -215,12 +202,13 @@ body::-webkit-scrollbar-track {
   }
   
   .page1 {
-    background-image: url(image17.jpg);
+    background-image: url(newimg17.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 50vh;
     margin: 0 0 1em 0;
   }
+
   
   .page1 h1 {
     position: relative;
@@ -233,7 +221,6 @@ body::-webkit-scrollbar-track {
     min-height: calc(80vh - 200px);
     padding: 0 9em;
   }
-  
   
   .page2-p {
     position: relative;
@@ -255,8 +242,6 @@ body::-webkit-scrollbar-track {
     font-size: 40px;
 
   }
-  
-  
   
   .container{
   position: relative;
@@ -477,13 +462,11 @@ body::-webkit-scrollbar-track {
     top: -5em;
   }
   
-
   .rubrik {
     position  : relative; 
     width     : 100%;  
     height    : 10%; 
     text-align: center;
- 
   }
 
   .rubrik span {
@@ -507,7 +490,6 @@ body::-webkit-scrollbar-track {
     padding: 0 1em;
 }
 
-  
   .page3 p {
   position: relative;
   padding: 70px;
@@ -515,7 +497,6 @@ body::-webkit-scrollbar-track {
   background-color: var(--textruta);
   border-radius: 70px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  
   }
   
   .page3 img{
@@ -524,15 +505,12 @@ body::-webkit-scrollbar-track {
   height: auto;
   margin-top: 1em;
   border-radius: 15px;
-
   }
   
   #btn2{
   padding-left: 35em;
   top: -8em;
   }
-  
-  
 
   .page4{
     position: relative;
@@ -550,17 +528,12 @@ body::-webkit-scrollbar-track {
 @keyframes soup{
   0%{background-position: 0 0;}
   100%{background-position: -2380px 0;}
-	
 }
-  
-
   
   .page5 {
   min-height: calc(90vh - 200px);
-  
   }
 
-  
   .Sboxes {
   margin-top: 0px;
   display: flex;
@@ -627,7 +600,6 @@ body::-webkit-scrollbar-track {
   .title {
     font-weight: bolder;
     font-size: 39px;
-    
   }
   
   .myapproachp{
@@ -638,26 +610,22 @@ body::-webkit-scrollbar-track {
     text-align: center;
   }
 
-  
   .page6 {
     position: relative;
   min-height: calc(100vh - 200px);
   display: flex;
   justify-content: space-evenly;
   padding: 0em 12em;
-
   }
   
   #box1 {
   position: relative;
   margin: 4em 16em;
-
   }
   
   #box2 {
   position: relative;
   left: 4em;
-
   }
   
   .box p {
@@ -727,17 +695,12 @@ body::-webkit-scrollbar-track {
    }
   }
   
-  
-  
-  
   video {
   position: relative;
   border: 6px solid rgb(236, 230, 207); 
   box-shadow: 20px 10px var(--boxshadow); 
   border-radius: 36px;
   }
-  
-  
   
   footer {
     background-color: var(--kallbrun);
@@ -759,6 +722,7 @@ body::-webkit-scrollbar-track {
     margin-bottom: 5px;
   }
 
+/*responsive 1366*/ 
   @media (max-width: 1366px) {
 
     .page2{
@@ -774,7 +738,7 @@ body::-webkit-scrollbar-track {
     }
 
   }
-
+/*responsive 1100*/ 
   @media (max-width: 1100px) {
 
     #about{
@@ -789,8 +753,7 @@ body::-webkit-scrollbar-track {
     .page6 {
     padding: 0em 5em;
     }
-
-      
+ 
   #box1 {
     position: relative;
     margin: 4em 10em;
@@ -813,11 +776,14 @@ body::-webkit-scrollbar-track {
         font-size: 18px;
     }
 
+    .page1{
+      background-image: url(image17.jpg);
+    }
+
     .page2{
         display: block;
     }
 
-      
   .page2-p {
     margin: auto;
     padding: 0 0 1em 0;
@@ -880,7 +846,6 @@ body::-webkit-scrollbar-track {
   margin: 0em 0em;
   }
  
-  
   .myapproachp{
     padding: 1em;
     margin: 1em;
